[package]
name = "ircpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
openssl = "0.10.55"
tokio = { version = "1.39", features = ["full"] }
tokio-openssl = "0.6.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
